tests/ui/parser/issues/issue-54521-3.stderr
error: unmatched angle brackets
  --> $DIR/issue-54521-3.rs:11:60
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>>>>();
   |                                                            ^^^^
   |
help: remove extra angle brackets
   |
LL -     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>>>>();
LL +     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>();
   |

error: unmatched angle brackets
  --> $DIR/issue-54521-3.rs:14:60
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>>>();
   |                                                            ^^^
   |
help: remove extra angle brackets
   |
LL -     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>>>();
LL +     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>();
   |

error: unmatched angle brackets
  --> $DIR/issue-54521-3.rs:17:60
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>>();
   |                                                            ^^
   |
help: remove extra angle brackets
   |
LL -     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>>();
LL +     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>();
   |

error: unmatched angle bracket
  --> $DIR/issue-54521-3.rs:20:60
   |
LL |     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>();
   |                                                            ^
   |
help: remove extra angle bracket
   |
LL -     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>>();
LL +     let _ = vec![1, 2, 3].into_iter().collect::<Vec<usize>>();
   |

error: aborting due to 4 previous errors

